# bert-api

./: .gitattributes  .gitignore  README.md  pyproject.toml  script
bert_api/bert/: predict.py
bert_api/data/: model_config.json  multiple_classes.dict
bert_api/data/bert_model/: checkpoint  model.data-00000-of-00001  model.index
bert_api/data/logs/train_log/: events.out.tfevents.1622334021.f1ce44ce3606
bert_api/data/logs/valid_log/: events.out.tfevents.1622334065.f1ce44ce3606
bert_api/data/ru_conversational_cased_L-12_H-768_A-12/: bert_model.ckpt.data-00000-of-00001  bert_model.ckpt.index
tests/: test_bert_api.py
