[tool.poetry]
name = "bert-api"
version = "0.1.0"
description = ""
authors = ["Mukammed Alimbet <alimbetov.mu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.7"
deeppavlov = "^0.15.0"

[tool.poetry.scripts]
script = "bert_api.bert.predict:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
